# Omega

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  Vagrantfile
src/: lib.rs  vgab.rs
src/arch/x86_64/: boot.asm  init.asm  init_lm.asm  multiboot_header.asm
src/arch/x86_64/boot/grub/: grub.cfg
